--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
     <title>Bon Appetit Pizza</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/bootstrap.css">
+    <div class="view landing">
+     <div id="overlay">
+         <nav class="navbar navbar-expand-md bg-danger navbar-dark fixed-top">
+           <a class="navbar-brand" href="#">Bon Appetit Pizza</a>
+           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+             <span class="navbar-toggler-icon"></span>
+           </button>
+           <div class="collapse navbar-collapse align-items-center" id="collapsibleNavbar">
+             <ul class="navbar-nav">
+               <li class="nav-item">
+                 <a class="nav-link" href="#about-us">About Us</a>
+               </li>
+               <li class="nav-item">
+                 <a class="nav-link" href="#">Our Menu</a>
+               </li>
+               <li class="nav-item">
+                 <a class="nav-link" href="#">Our Varieties</a>
+               </li>
+             </ul>
+           </div>
+         </nav>
   </head>
   <body>
 
