--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
              </ul>
            </div>
          </nav>
+         <div class="view">
+    <div id="overlay">
+        <div class="mask rgba-black-light align-items-center">
+          <div class="container" id="head">
+            <div class="row">
+              <div class="col-md-12 mb-4 white-text text-center text">
+                <h1 class="h1-reponsive gold-text text-uppercase font-weight-bold mb-0 pt-md-5 pt-5 wow fadeInDown" data-wow-delay="0.3s"><strong>Bon Appetit Pizza</strong></h1>
+                <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.4s">
+                <h5 class="text-uppercase mb-4 gold-text wow fadeInDown" data-wow-delay="0.4s"><strong>Best Pizza Shop in Town!</strong></h5>
+                <a class="btn btn-green wow fadeInDown button" >Order Now!</a>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+  </div>
   </head>
   <body>
 
