add chicken tikka image

--- a/index.html
+++ b/index.html
@@ -44,6 +44,31 @@
   </div>
   </head>
   <body>
+    <div class="container" id="about-us">
+       <div class="col-sm-12 d-flex flex-xm-column">
+         <div class="col-sm-6 align-items-center">
+           <div class="content">
+             <h3>Who Are We?</h3>
+             <p>In 1958, two Texas brothers opened the first Pizza Inn across from the Southern Methodist University campus in Dallas. As word spread of the restaurant’s exceptional pizza and friendly service, so did Pizza Inn locations across the Heartland. From 1960-1990, taste buds across the southeastern and southwestern U.S. were able to experience first-hand the made-from-scratch crispy, crackery Original Thin crust, and tangy signature sauce that are still hallmarks of the Pizza Inn brand today. For more than 60 years, Pizza Inn has prided ourselves on freshness and innovation, introducing the Taco Pizza in 1979, the first dessert “Pizzert” pizza in 1986 and the chain’s hallmark Bacon Cheeseburger Pizza by the 1990s. We’re still cooking up fresh ideas to this day and are committed to bringing our best pizza to the table, every time.
 
+</p>
+           </div>
+         </div>
+       </div>
+</div>
+<div class="container carousel slide carousel-multi-item" data-ride="carousel">
+ <div class="controls-top ">
+   <h2>Our Varieties</h2>
+ </div>
+ <div class="carousel-inner" role="listbox">
+       <div class="carousel-item active">
+         <div class="col-md-4">
+           <div class="card mb-2">
+             <img class="card-img-top" src="images/pizza1.jpg" alt="Card image cap">
+             <div class="card-body">
+               <h5 class="card-title">Chicken Tikka</h5>
+             </div>
+           </div>
+         </div>
   </body>
 </html>
