add peri peri pizza pic

--- a/index.html
+++ b/index.html
@@ -70,5 +70,13 @@
              </div>
            </div>
          </div>
-  </body>
+         <div class="col-md-4">
+          <div class="card mb-2">
+            <img class="card-img-top" src="images/pizza2.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">PeriPeri Pizza</h5>
+            </div>
+          </div>
+        </div>
+           </body>
 </html>
