--- a/index.html
+++ b/index.html
@@ -78,5 +78,24 @@
             </div>
           </div>
         </div>
+        <div class="col-md-4">
+        <div class="card mb-2">
+          <img class="card-img-top" src="images/pizza3.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Raspberry Dessert Pizza</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="col-md-4">
+        <div class="card mb-2">
+          <img class="card-img-top" src="images/pizza4.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Chicken Alfredo Pizza</h5>
+          </div>
+        </div>
+      </div>
+    </div>
            </body>
 </html>
