--- a/index.html
+++ b/index.html
@@ -97,5 +97,30 @@
         </div>
       </div>
     </div>
+    <div class="col-md-4">
+         <div class="card mb-2">
+           <img class="card-img-top" src="images/pizza5.jpg" alt="Card image cap">
+           <div class="card-body">
+             <h5 class="card-title">Sunchoke Pizza</h5>
+           </div>
+         </div>
+       </div>
+
+       <div class="col-md-4">
+         <div class="card mb-2">
+           <img class="card-img-top" src="images/pizza6.jpg" alt="Card image cap">
+           <div class="card-body">
+             <h5 class="card-title"> Buffalo Chicken Sticks</h5>
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
+ </div>
+
+
+ <div class="container-fluid order" id="make-order">
+   <div class="order-overlay">
+     <div class="controls-top text-center" id="Order-now">
            </body>
 </html>
