--- a/index.html
+++ b/index.html
@@ -138,5 +138,19 @@
                 <option value="Sunchoke Pizza">Sunchoke Pizza</option>
                 <option value="Buffalo Chicken Sticks">Buffalo Chicken Sticks</option>
               </select>
+              <label for="select">Select Size</label>
+              <select class="browser-default custom-select custom-select-sm mb-3" id="size">
+                <option selected value="0">Select size here</option>
+                <option value="large">Large -- sh. 1000</option>
+                <option value="medium">Medium -- sh. 650</option>
+                <option value="small">Small -- sh. 350</option>
+              </select>
+              <label for="crust">Crust!</label>
+                <select class="browser-default custom-select" id="crust">
+                    <option selected value="0">Select your preferred crust!</option>
+                  <option value="Crispy">Crispy -- sh. 100</option>
+                  <option value="Stuffed">Stuffed -- sh. 50</option>
+                  <option value="Gluten-free">Gluten-free-- sh. 80</option>
+                </select>
            </body>
 </html>
