changed prices of the crust

--- a/index.html
+++ b/index.html
@@ -139,18 +139,18 @@
                 <option value="Buffalo Chicken Sticks">Buffalo Chicken Sticks</option>
               </select>
               <label for="select">Select Size</label>
-              <select class="browser-default custom-select custom-select-sm mb-3" id="size">
+              <select class="browser-default custom-select custom-select-md mb-3" id="size">
                 <option selected value="0">Select size here</option>
-                <option value="large">Large -- sh. 1000</option>
-                <option value="medium">Medium -- sh. 650</option>
-                <option value="small">Small -- sh. 350</option>
+                <option value="large">Large -- sh. 1400</option>
+                <option value="medium">Medium -- sh. 900</option>
+                <option value="small">Small -- sh. 500</option>
               </select>
-              <label for="crust">Crust!</label>
-                <select class="browser-default custom-select" id="crust">
+              <label for="crust">Select your Crust!</label>
+                <select class="browser-default custom-select custom-select-md mb-3" id="crust">
                     <option selected value="0">Select your preferred crust!</option>
-                  <option value="Crispy">Crispy -- sh. 100</option>
-                  <option value="Stuffed">Stuffed -- sh. 50</option>
-                  <option value="Gluten-free">Gluten-free-- sh. 80</option>
+                  <option value="Crispy">Crispy -- sh. 200</option>
+                  <option value="Stuffed">Stuffed -- sh. 150</option>
+                  <option value="Gluten-free">Gluten-free-- sh. 180</option>
                 </select>
            </body>
 </html>
