--- a/index.html
+++ b/index.html
@@ -167,6 +167,36 @@
               </div>
               <br><br>
             <button type="submit" class="btn btn-orange proceed">Proceed</button>
-            
+          </form>
+       </div>
+       <div class="col-sm-7">
+         <div id="information">
+           <p>Your order will be and delivered within one hour to your  placing.</p>
+           <p>On payment on delivery ensure you haveexact amount for the order</p>
+           <p>Incase of any comment of complaint, Please reach out to us as fast as possible.</p>
+           <p id="regards">Regards, Management</p>
+         </div>
+         <div class="choise">
+           <h2>Your Order is:</h2>
+           <div id="your-orders">
+             <table class="table table-sm  pizzatable">
+               <thead>
+                 <tr>
+                   <th scope="col">Name</th>
+                   <th scope="col">Size</th>
+                   <th scope="col">Crust</th>
+                   <th scope="col">Topping</th>
+                   <th scope="col">Total</th>
+                 </tr>
+               </thead>
+               <tbody id="ordersmade">
+                 <tr>
+                   <td id="pizzaname"></td>
+                   <td id="pizzasize"></td>
+                   <td id="pizzacrust"></td>
+                   <td id="pizzatopping"></td>
+                   <td id="totals"></td>
+                 </tr>
+               </tbody>
            </body>
 </html>
