--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
            <p>Incase of any comment of complaint, Please reach out to us as fast as possible.</p>
            <p id="regards">Regards, Management</p>
          </div>
-         <div class="choise">
+         <div class="choice">
            <h2>Your Order is:</h2>
            <div id="your-orders">
              <table class="table table-sm  pizzatable">
@@ -198,5 +198,29 @@
                    <td id="totals"></td>
                  </tr>
                </tbody>
+             </table>
+             <p id="pizzatotal"></p>
+             <p id="totalbill"></p>
+             <p id="addedprice">Delivery will cost sh. 150</p>
+             <p id="finallmessage"></p>
+           </div>
+           <button class="btn btn-orange addPizza">Add Pizza</button>
+           <button class="btn btn-orange" id="checkout">Checkout</button>
+           <button class="btn btn-orange deliver">Home delivery?</button>
+         </div>
+         <div class="delivery">
+             <form action="">
+               <div class="form-group">
+                 <input type="text" id="name" class="form-control mb-3" placeholder="Name">
+                 <input type="number" id="phone" class="form-control mb-3" placeholder="Pnone Number">
+                 <input type="text" id="location" class="form-control mb-3" placeholder="Location for delivery">
+                 <button class="btn btn-orange" id="final-order">Place Order</button>
+               </div>
+             </form>
+         </div>
+       </div>
+   </div>
+ </div>
+</div>
            </body>
 </html>
