--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
              </table>
              <p id="pizzatotal"></p>
              <p id="totalbill"></p>
-             <p id="addedprice">Delivery will cost sh. 150</p>
+             <p id="addedprice">Delivery will cost sh. 200</p>
              <p id="finallmessage"></p>
            </div>
            <button class="btn btn-orange addPizza">Add Pizza</button>
@@ -212,7 +212,7 @@
              <form action="">
                <div class="form-group">
                  <input type="text" id="name" class="form-control mb-3" placeholder="Name">
-                 <input type="number" id="phone" class="form-control mb-3" placeholder="Pnone Number">
+                 <input type="number" id="phone" class="form-control mb-3" placeholder="Phone Number">
                  <input type="text" id="location" class="form-control mb-3" placeholder="Location for delivery">
                  <button class="btn btn-orange" id="final-order">Place Order</button>
                </div>
@@ -222,5 +222,41 @@
    </div>
  </div>
 </div>
+<div class="container-fluid bg-default" id="contact">
+     <div class="controls-top ">
+         <h2>Contact Us</h2>
+       </div>
+     <div class="row" id="contactdetails">
+       <div class="col-md-1">
+
+       </div>
+       <div class="col-md-3 text-justify">
+         <h2>Location</h2>
+         <p>Bon Appetit Pizza</p>
+         <p>Texas ,Dallas</p>
+         <p>2345,Texas </p>
+       </div>
+       <div class="col-md-3">
+         <h2>Customer Care</h2>
+          <p>mungunoble@gmail.com</p>
+          <p>Tell: +102356789876</p>
+          <p>Phone: 1234567890</p>
+       </div>
+       <div class="col-md-4">
+           <div class="mapouter">
+             <div class="gmap_canvas">
+               </iframe>
+             </div>
+             <style>.mapouter{position:relative;text-align:right;height:180px;width:350px;}.gmap_canvas {overflow:hidden;background:none!important;height:180px;width:350px;}</style>
+           </div>
+       </div>
+       <div class="col-md-1"></div>
+     </div>
+     <div class="row">
+       <div class="container text-center footer">
+         <p>&copy; 2020 | Bon Appetit Pizza</p>
+       </div>
+     </div>
+ </div>
            </body>
 </html>
