used relative path instead of absolute path

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/bootstrap.css">
+    <script src="./script.js" charset="utf-8"></script>
+
+    </script>
     <div class="view landing">
      <div id="overlay">
          <nav class="navbar navbar-expand-md bg-danger navbar-dark fixed-top">
@@ -65,7 +68,7 @@
        <div class="carousel-item active">
          <div class="col-md-4">
            <div class="card mb-2">
-             <img class="card-img-top" src="images/pizza1.jpg" alt="Card image cap">
+             <img class="card-img-top" src="./images/pizza1.jpg" alt="Card image cap">
              <div class="card-body">
                <h5 class="card-title">Chicken Tikka</h5>
              </div>
@@ -73,7 +76,7 @@
          </div>
          <div class="col-md-4">
           <div class="card mb-2">
-            <img class="card-img-top" src="images/pizza2.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./images/pizza2.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">PeriPeri Pizza</h5>
             </div>
@@ -81,7 +84,7 @@
         </div>
         <div class="col-md-4">
         <div class="card mb-2">
-          <img class="card-img-top" src="images/pizza3.jpg" alt="Card image cap">
+          <img class="card-img-top" src="./images/pizza3.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Raspberry Dessert Pizza</h5>
           </div>
@@ -91,7 +94,7 @@
     <div class="carousel-item">
       <div class="col-md-4">
         <div class="card mb-2">
-          <img class="card-img-top" src="images/pizza4.jpg" alt="Card image cap">
+          <img class="card-img-top" src="./images/pizza4.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Chicken Alfredo Pizza</h5>
           </div>
@@ -100,7 +103,7 @@
     </div>
     <div class="col-md-4">
          <div class="card mb-2">
-           <img class="card-img-top" src="images/pizza5.jpg" alt="Card image cap">
+           <img class="card-img-top" src="./images/pizza5.jpg" alt="Card image cap">
            <div class="card-body">
              <h5 class="card-title">Sunchoke Pizza</h5>
            </div>
@@ -109,7 +112,7 @@
 
        <div class="col-md-4">
          <div class="card mb-2">
-           <img class="card-img-top" src="images/pizza6.jpg" alt="Card image cap">
+           <img class="card-img-top" src="./images/pizza6.jpg" alt="Card image cap">
            <div class="card-body">
              <h5 class="card-title"> Buffalo Chicken Sticks</h5>
            </div>
